--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-03-24 Version: v1.0.5
+- Support New API for sending messages and contacts check.
+
 2022-03-08 Version: v1.0.4
 - Support Template Management OpenAPI.
 
