--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-08-19 Version: v1.0.10
+- Support Batch Send API.
+
 2022-07-15 Version: v1.0.9
 - Support Fallback to SMS Message When Failed.
 
