--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2022-10-08 Version: v2.0.1
+- Add template modify API.
+- Add BeeBot APIs.
+
 2022-09-23 Version: v2.0.0
 - Generated golang 2020-06-06 for cams.
 
