--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2023-01-03 Version: v2.0.4
+- Add ContextMessageId.
+- Add ChannelType viber
+
 2022-11-18 Version: v2.0.3
 - Mark deprecated parameter.
 - Add CustSpaceId parameter.
