--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2023-03-06 Version: v2.0.7
+- Add viber template create
+- Add viber template modify
+- Add isv terms upload
+
 2023-02-10 Version: v2.0.6
 - Add viber template batch send
 
