--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2023-04-14 Version: v2.0.9
+- whatsapp 目录修改
+- 回落短信允许指定回执超时回落时间
+- 增加Whatsapp 模板中location消息类型
+
 2023-03-06 Version: v2.0.8
 - Add viber template create
 - Add viber template modify
