--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+2024-06-21 Version: v2.4.4
+- Update API CreateChatappTemplate: update param Components.
+- Update API GetChatappTemplateDetail: update response param.
+- Update API ModifyChatappTemplate: update param Components.
+
+
 2024-05-30 Version: v2.4.3
 - Update API ListChatappTemplate: add param Code.
 - Update API QueryChatappBindWaba: add param AccessKeyId.
