--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+2024-07-25 Version: v2.5.0
+- Support API GetConversationalAutomation.
+- Support API GetWhatsappHealthStatus.
+- Support API UpdateConversationalAutomation.
+
+
 2024-07-24 Version: v2.4.5
 - Update API AddChatappPhoneNumber: add param AccessKeyId.
 - Update API AddChatappPhoneNumber: add param OwnerId.
